# SmartIncubator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.5de1fca  CMakeLists.txt.user.85d6d1e  CMakeLists.txt.user.ef4d812  Documento sem título.md  LICENSE  README.md  README_PT.md  historico_incubadora.txt
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
headers/: datastorage.h  historydialog.h  incubatorcontroller.h  mainwindow.h  serialcomm.h
resources/: resources.qrc
sketch_nov6a/: sketch_nov6a.ino
src/: aboutdialog.cpp  datastorage.cpp  historydialog.cpp  incubatorcontroller.cpp  mainwindow.cpp  serialcomm.cpp
ui/: aboutdialog.ui  historydialog.ui  mainwindow.ui
